# spnr

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  rust-toolchain.toml
ci/: README.md
crates/spnr-adapters/: Cargo.toml
crates/spnr-adapters/src/: lib.rs
crates/spnr-cli/: Cargo.toml
crates/spnr-cli/src/: main.rs
crates/spnr-hook/: Cargo.toml
crates/spnr-hook/src/: main.rs
crates/spnr-meta/: Cargo.toml
crates/spnr-meta/src/: lib.rs
crates/spnr-proto/: Cargo.toml
crates/spnr-proto/src/: canonical.rs  chain.rs  event.rs  key.rs  lib.rs  socket.rs
crates/spnr-proto/tests/: proto.rs  web_compat.rs
crates/spnr-settings/: Cargo.toml
crates/spnr-settings/src/: lib.rs
crates/spnr-status/: Cargo.toml
crates/spnr-status/src/: main.rs
crates/spnrd/: Cargo.toml
crates/spnrd/src/: engine.rs  main.rs  queue.rs
docs/: 00-product-overview.md  01-architecture.md  02-technical-spec.md  03-protocol-SAP1.md  04-impression-engine.md  05-fraud-attestation.md  06-money-settlement.md  07-security-privacy.md  08-testing-strategy.md  09-repo-build-layout.md  10-implementation-plan.md  11-phases-roadmap.md  12-risks-open-questions.md  13-research-findings.md  14-go-no-go.md  15-spike-results.md  README.md
docs/adr/: 0001-payout-default-gift-cards-not-api-credits.md  0002-statusline-as-coarse-liveness-gate.md  0003-x402-batch-settlement-not-per-impression.md  0004-platform-risk-adapter-abstraction.md  0005-naming-and-domains.md  0006-crypto-native-agent-economy-launch-wedge.md  0007-language-split-rust-client-ts-backend.md  0008-frontend-react-ts-spa.md
docs/source/: product-spec-v0.2.md  tech-spec-v1.0.md
docs/superpowers/specs/: 2026-06-15-chrome-extension-ad-surface-design.md
e2e/: accrue.sh  install.sh  run.sh
e2e/playwright/: advertiser.live.cjs  auth.live.cjs  dashboard.check.cjs  dashboard.live.cjs  package-lock.json  package.json  shot-admin.cjs  shot-dashboards.cjs  shot-v5.cjs
extension/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: config.ts  manifest.json
extension/src/content/: bar.ts  dom-anchors.ts  events.ts  index.ts
extension/src/worker/: backend.ts  encoding.ts  identity.ts  index.ts  ingest.ts  register.ts  sap1.ts  serve.ts
extension/test/: sap1.test.mjs
install/: Dockerfile.get  README.md  deploy-get.sh  deploy-portal.sh  get.sh  install.sh  uninstall.sh
outreach/: gen_outreach.py  spnr_outreach.json
outreach/data/: part1.tsv  part2.tsv  part3.tsv
server/: README.md
server-ts/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
server-ts/src/: admin-auth.ts  admin.ts  app.ts  lint.ts  server.ts  store.ts
server-ts/test/: app.test.ts  lint.test.ts  persistence.test.ts  store.test.ts
server/spnr-server/: Cargo.toml
server/spnr-server/src/: db.rs  main.rs
spec/: README.md
web/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
web/.design-export/: advertiser.html  dashboard.html  index.html  spnr Advertiser Portal.dc.html  spnr Dashboard.dc.html  spnr Landing.dc.html
web/src/: App.tsx  main.tsx  theme.css  theme.ts
web/src/components/: Crt.tsx  RequireAuth.tsx  SectionHeader.tsx  Shell.tsx
web/src/lib/: useAuth.ts  usePortal.ts  useStats.ts  useTheme.ts
web/src/pages/: Advertiser.tsx  Dashboard.tsx  Landing.tsx  Login.tsx
